Cause Details Works and CauseDetails Controller Edit

--- a/CommunityKitchen/Views/Home/Index.cshtml
+++ b/CommunityKitchen/Views/Home/Index.cshtml
@@ -163,7 +163,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div id="kati6"><a id="lod" href="single-cause.html">donate now</a></div>
+                                        <div id="kati6"><a id="lod" href="/Cause/CauseIndex">donate now</a></div>
                                     </div>
                                     <div id="lett" class="donate-price"><b>$44,210</b>&nbsp;  Raised of <span id="lett1">$99,541</span> Goal</div>
 
