--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -22,7 +22,7 @@
                         <ul>
                             <li>@Html.ActionLink("Archive", "ArchivedEvents", "Event")</li>
                             <li>@Html.ActionLink("Stories", "StoriesIndex", "Story")</li>
-                            <li>@Html.ActionLink("Support A Cause", "SupportCause", "Support")</li>
+                            <li>@Html.ActionLink("Support A Cause", "CauseIndex", "Cause")</li>
                             <li>@Html.ActionLink("Upcoming Events", "EventsIndex", "Event")</li>
                         </ul>
                     </li>
