--- a/CommunityKitchen/Views/Cause/CauseIndex.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseIndex.cshtml
@@ -1,4 +1,10 @@
-﻿<section class="page-banner">
+﻿@model IEnumerable<Entities.Cause>
+
+@{
+    ViewBag.Title = "CauseIndex";
+}
+ 
+<section class="page-banner">
     <div class="container">
         <div class="title">
             <h1>all <span>Causes</span></h1>
@@ -28,7 +34,7 @@
             <div class="row">
                 @foreach (var cause in Model)
                 {
-                    var res =Math.Round( (100 * cause.CurrentAmmount) / cause.TargetGoal);
+                    var res = Math.Round((100 * cause.CurrentAmmount) / cause.TargetGoal);
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="item">
                             <div class="bg-area">
@@ -37,14 +43,13 @@
                                     <div class="overlay">
                                         <div class="box">
                                             <div class="content">
-                                                <a href="single-cause.html"><i class="fa fa-link"></i></a>
+                                                <a href="CauseDetails/@cause.Id"><i class="fa fa-link"></i></a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="content-box">
                                     <div class="progress-levels">
-
                                         <!--Skill Box-->
                                         <div class="progress-box">
 
@@ -63,7 +68,7 @@
                                     <div class="donate-price"><b>@cause.CurrentAmmount€ </b>&nbsp;  Raised of <span>@cause.TargetGoal€</span></div>
                                     <h4>@cause.Title</h4>
                                     <p>@cause.Description</p>
-                                    <div class="link"><a href="#" class="thm-btn style-2">donate now</a></div>
+                                    <div class="link"><a href="CauseDetails/@cause.Id" class="thm-btn style-2">donate now</a></div>
                                 </div>
                             </div>
 
@@ -108,14 +113,14 @@
 </section>
 
 @*<script>
-    $(document).ready(function () {
-        $(".bar-fill").attr("data-percent", CalBar(100, 90));
+        $(document).ready(function () {
+            $(".bar-fill").attr("data-percent", CalBar(100, 90));
 
-    });
-    function CalBar(Target, Current) {
-        return (100 * Current) / Target;
-    }
+        });
+        function CalBar(Target, Current) {
+            return (100 * Current) / Target;
+        }
 
 
 
-</script>*@
+    </script>*@
