--- a/CommunityKitchen/Views/Cause/EditCause.cshtml
+++ b/CommunityKitchen/Views/Cause/EditCause.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Entities.Cause
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "EditCause";
 }
 
 <h2>Edit</h2>
@@ -74,7 +74,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "OrganizeCause")
 </div>
 
 @section Scripts {
