--- a/CommunityKitchen/Views/Event/CreateEvent.cshtml
+++ b/CommunityKitchen/Views/Event/CreateEvent.cshtml
@@ -53,6 +53,10 @@
         </div>
     </div>
 }
+
+<div>
+    @Html.ActionLink("Back to List", "OrganizeEvents")
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
