--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -27,9 +27,9 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        @Html.ActionLink("Organizer", "InventoryIndex", "Inventory")
+                        @Html.ActionLink("Organizer", "Index", "Item")
                         <ul>
-                            <li>@Html.ActionLink("Manage Inventory", "InventoryIndex", "Inventory")</li>
+                            <li>@Html.ActionLink("Manage Inventory", "Index", "Item")</li>
                             <li>@Html.ActionLink("Organize Event", "OrganizeEvents", "Event")</li>
                             <li>@Html.ActionLink("Organize Cause", "OrganizeCause", "Cause")</li>
                         </ul>
@@ -56,7 +56,7 @@
                 <li class="dropdown">
                     @Html.ActionLink("Organizer", "InventoryIndex", "Inventory")
                     <ul>
-                        <li>@Html.ActionLink("Manage Inventory", "InventoryIndex", "Inventory")</li>
+                        <li>@Html.ActionLink("Manage Inventory", "Index", "Item")</li>
                         <li>@Html.ActionLink("Organize Event", "OrganizeEvents", "Event")</li>
                         <li>@Html.ActionLink("Organize Cause", "OrganizeCause", "Cause")</li>
                     </ul>
