--- a/CommunityKitchen/Views/Cause/CauseIndex.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseIndex.cshtml
@@ -68,7 +68,7 @@
                                     <div class="donate-price"><b>@cause.CurrentAmmount€ </b>&nbsp;  Raised of <span>@cause.TargetGoal€</span></div>
                                     <h4>@cause.Title</h4>
                                     <p>@cause.Description</p>
-                                    <div class="link"><a href="CauseDetails/@cause.Id" class="thm-btn style-2">donate now</a></div>
+                                    <div class="link"><a href="CauseDonate/@cause.Id" class="thm-btn style-2">donate now</a></div>
                                 </div>
                             </div>
 
