--- a/CommunityKitchen/Views/Cause/CauseDetails.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseDetails.cshtml
@@ -4,61 +4,33 @@
     ViewBag.Title = "CauseDetails";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>Cause</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+    <h4 style="display:center;">Cause Details</h4>
+    <section class="single-event">
+        <div class="container">
+            <figure class="image-box">
+                <img src="images/event/8.jpg" alt="" />
+            </figure>
+            <div class="content-box">
+                <div class="icon-box">
+                    @Html.DisplayFor(model => model.Photo)
+                </div>
+                <div class="title">
+                    <h2>@Html.DisplayFor(model => model.Title)</h2>
+                </div>
+                <div class="text">
+                    <p>@Html.DisplayFor(model => model.Description)</p>
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
+                <div class="donate-price"><b>@Html.DisplayFor(model => model.CurrentAmmount)€ </b>&nbsp; Raised of  <span> @Html.DisplayFor(model => model.TargetGoal)€ </span> Goal</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Photo)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Photo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TargetGoal)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TargetGoal)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CurrentAmmount)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CurrentAmmount)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModeratorId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModeratorId)
-        </dd>
-
-    </dl>
+            </div>
+        </div>
+    </section>
 </div>
 <p>
     @Html.ActionLink("Edit", "EditCause", new { id = Model.Id }) |
