--- a/CommunityKitchen/Views/Archive/Index.cshtml
+++ b/CommunityKitchen/Views/Archive/Index.cshtml
@@ -39,8 +39,8 @@
     <tr>
         <th>Title</th>
         <th>Description</th>
-        @*<th>Target Goal</th>
-            <th>Current Amount</th>*@
+        <th>Target Goal</th>
+        <th>Current Amount</th>
     </tr>
     @foreach (var cause in Model.causesList)
     {
