cause event image

--- a/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
+++ b/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
@@ -39,11 +39,11 @@
                             @Html.DisplayFor(modelItem => @cause.Photo)
                         </div>
                         <div>
-                            <strong>Target Goal - </strong>
+                            <strong>Target Goal: </strong>
                             @Html.DisplayFor(modelItem => @cause.TargetGoal)
                         </div>
                         <div>
-                            <strong>Current Ammount - </strong>
+                            <strong>Current Ammount: </strong>
                             @Html.DisplayFor(modelItem => @cause.CurrentAmmount)
                         </div>
                         <div>
