--- a/CommunityKitchen/Views/Event/EventDetails.cshtml
+++ b/CommunityKitchen/Views/Event/EventDetails.cshtml
@@ -9,12 +9,17 @@
     <div class="container">
         <figure class="image-box">
             <img src="images/event/8.jpg" alt="" />
-        </figure>
-        <div class="content-box">
+        </figure>   
+        <div class="content-box" >
 
+            <hr />
+            <div style="display: flex; justify-content: center;overflow: hidden;">
+                <img style="border-radius: 100px; height: 200px; width: 800px; object-fit: cover;" src="~/Assets/images/ImagesSaved/@Model.Photo" />
+            </div>
             <div class="title">
                 <h2>@Model.Title</h2>
-            </div>
+            </div>  
+
             <ul class="event-info">
                 <li><span class="fa fa-calendar"></span>@Model.EventDate.ToLongDateString()</li>
                 <li> &emsp; <span class="fa fa-map-marker"></span>@Model.Address</li>
