--- a/CommunityKitchen/Views/Cause/CauseDetails.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseDetails.cshtml
@@ -13,9 +13,15 @@
                 <img src="images/event/8.jpg" alt="" />
             </figure>
             <div class="content-box">
-                <div class="icon-box">
-                    @Html.DisplayFor(model => model.Photo)
+
+                <hr />
+                <div style="display: flex; justify-content: center;overflow: hidden;">
+                    <img style="border-radius: 100px; height: 200px; width: 800px; object-fit: cover;" src="~/Assets/images/ImagesSaved/@Model.Photo" />
                 </div>
+
+                @*<div class="icon-box">
+                    <img style="object-fit: cover;" src="~/Assets/images/ImagesSaved/@Model.Photo" />
+                </div>*@
                 <div class="title">
                     <h2>@Html.DisplayFor(model => model.Title)</h2>
                 </div>
