--- a/CommunityKitchen/Views/Cause/CreateCause.cshtml
+++ b/CommunityKitchen/Views/Cause/CreateCause.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("CreateCause", "Cause", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Photo" } })
+                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", type = "file", placeholder = "Causes Photo" } })
                         @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
                     </div>
 
