--- a/CommunityKitchen/Views/Cause/EditCause.cshtml
+++ b/CommunityKitchen/Views/Cause/EditCause.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "EditCause";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("EditCause", "Cause", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -31,7 +31,7 @@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Photo, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", type = "file" } })
                         @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
                     </div>
 
