--- a/CommunityKitchen/Views/Event/CreateEvent.cshtml
+++ b/CommunityKitchen/Views/Event/CreateEvent.cshtml
@@ -6,7 +6,7 @@
 
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("CreateEvent", "Event", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <div class="default-form-area" style="display: flex; justify-content: center">
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", placeholder = "Events Photo" } })
+                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", type = "file", placeholder = "Events Photo" } })
                         @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
                     </div>
 
