--- a/CommunityKitchen/Views/Event/EditEvent.cshtml
+++ b/CommunityKitchen/Views/Event/EditEvent.cshtml
@@ -7,7 +7,7 @@
 <h2>EditEvent</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("EditEvent", "Event", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -34,7 +34,7 @@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Photo)
-                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", type = "file"} })
                         @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
                     </div>
 
@@ -52,7 +52,7 @@
                     </div>
                     <div class="form-group">
                         <div>
-                            <input type="submit" value="Create" class="thm-btn" />
+                            <input type="submit" value="Save" class="thm-btn" />
                         </div>
                     </div>
                     <div class="form-group">
