--- a/CommunityKitchen/Views/Cause/CauseIndex.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseIndex.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "CauseIndex";
 }
- 
+
 <section class="page-banner">
     <div class="container">
         <div class="title">
@@ -28,99 +28,91 @@
             <h1>recent <span>causes</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
         </div>
+        @if (ViewBag.CurrentSortOrder == "AS")
+        {
+            @Html.ActionLink("Ascending", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
+            @Html.ActionLink("Descending", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-1" })
+        }
+        else
+        {
+            @Html.ActionLink("Ascending", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-1" })
+            @Html.ActionLink("Descending", "CauseIndex", new { sortOrder = ViewBag.CurrentSortOrder }, new { @class = "thm-btn style-2" })
+        }
+       
+         <div class="default-form-area" style="justify-content: left">
+             <div id="contact-form" class="default-form">
+                 <div class="row clearfix" style="justify-content: left">
+                     <div class="col-md-4 col-sm-12 col-xs-6">
+                         <br />
+                         <form style="display: -webkit-box" action="/Cause/CauseIndex" method="get">
+                             <br />
+                             <input  class="form-control text-box single-line " type="text" name="searchString" value="@ViewBag.searchString" placeholder="search by title" />
+                             <input class="thm-btn style-1 m-1" type="submit" value="Search" />
+                             <input class="thm-btn style-1" id="reset" type="reset" value="Clear" />
+                         </form>
+                     </div>
+                 </div>
+             </div>
+         </div>
+                    @if (Model.Count() > 0)
+                    {
 
 
-        <div class="item-list">
-            <div class="row">
-                @foreach (var cause in Model)
-                {
-                    var res = Math.Round((100 * cause.CurrentAmmount) / cause.TargetGoal);
-                    <div class="col-md-4 col-sm-6 col-xs-12">
-                        <div class="item">
-                            <div class="bg-area">
-                                <div class="image-box">
-                                    <img src="images/causes/1.jpg" alt="Awesome Image" />
-                                    <div class="overlay">
-                                        <div class="box">
-                                            <div class="content">
-                                                <a href="CauseDetails/@cause.Id"><i class="fa fa-link"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="content-box">
-                                    <div class="progress-levels">
-                                        <!--Skill Box-->
-                                        <div class="progress-box">
 
-                                            <div class="inner">
-                                                <div class="bar">
-                                                    <div class="bar-innner">
-                                                        <div data-percent="@res" class="bar-fill">
-                                                            <span class="percent">@res%</span>
+                        <div class="item-list">
+                            <div class="row">
+                                @foreach (var cause in Model)
+                                {
+                                    var res = Math.Round((100 * cause.CurrentAmmount) / cause.TargetGoal);
+                                    <div class="col-md-4 col-sm-6 col-xs-12">
+                                        <div class="item">
+                                            <div class="bg-area">
+                                                <div class="image-box">
+                                                    <img src="images/causes/1.jpg" alt="Awesome Image" />
+                                                    <div class="overlay">
+                                                        <div class="box">
+                                                            <div class="content">
+                                                                <a href="CauseDetails/@cause.Id"><i class="fa fa-link"></i></a>
+                                                            </div>
                                                         </div>
                                                     </div>
+                                                </div>
+                                                <div class="content-box">
+                                                    <div class="progress-levels">
+                                                        <!--Skill Box-->
+                                                        <div class="progress-box">
 
+                                                            <div class="inner">
+                                                                <div class="bar">
+                                                                    <div class="bar-innner">
+                                                                        <div data-percent="@res" class="bar-fill">
+                                                                            <span class="percent">@res%</span>
+                                                                        </div>
+                                                                    </div>
+
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="donate-price"><b>@cause.CurrentAmmount€ </b>&nbsp;  Raised of <span>@cause.TargetGoal€</span></div>
+                                                    <h4>@cause.Title</h4>
+                                                    <p>@cause.Description</p>
+                                                    <div class="link"><a href="CauseDonate/@cause.Id" class="thm-btn style-2">donate now</a></div>
                                                 </div>
                                             </div>
+
                                         </div>
                                     </div>
-                                    <div class="donate-price"><b>@cause.CurrentAmmount€ </b>&nbsp;  Raised of <span>@cause.TargetGoal€</span></div>
-                                    <h4>@cause.Title</h4>
-                                    <p>@cause.Description</p>
-                                    <div class="link"><a href="CauseDonate/@cause.Id" class="thm-btn style-2">donate now</a></div>
-                                </div>
+                                }
+
                             </div>
 
                         </div>
-                    </div>
-                }
-
-            </div>
-
-        </div>
-    </div>
+                    }
+                    else
+                    {
+                        <h1 style="color:red">No Causes Found</h1>
+                    }
+                </div>
 </section>
 
-<section class="clients-section">
-    <div class="container">
-        <div class="clients-carousel">
-            <div class="item">
-                <div class="image-box">
-                    <img src="images/clients/1.png" alt="">
-                </div>
-            </div>
-
-            <div class="item">
-                <div class="image-box">
-                    <img src="images/clients/2.png" alt="">
-                </div>
-            </div>
-
-            <div class="item">
-                <div class="image-box">
-                    <img src="images/clients/3.png" alt="">
-                </div>
-            </div>
-
-            <div class="item">
-                <div class="image-box">
-                    <img src="images/clients/2.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-@*<script>
-        $(document).ready(function () {
-            $(".bar-fill").attr("data-percent", CalBar(100, 90));
-
-        });
-        function CalBar(Target, Current) {
-            return (100 * Current) / Target;
-        }
-
-
-
-    </script>*@
