--- a/CommunityKitchen/Views/Archive/Index.cshtml
+++ b/CommunityKitchen/Views/Archive/Index.cshtml
@@ -9,50 +9,11 @@
     ViewBag.Title = "Index";
 }
 
-<h4>Archive Models</h4>
-<br style="padding:40px;">
-<h5>Events</h5>
-<hr>
-<table class="table table-striped table-light table-hover">
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Address</th>
-        <th>Date</th>
-    </tr>
-    @foreach (var ev in Model.eventsList)
-    {
-        <tr>
-            <td>@ev.Title</td>
-            <td>@ev.Description</td>
-            <td>@ev.Address</td>
-            <td>@ev.EventDate.ToLongDateString()
-            <td>
-        </tr>
-    }
-</table>
-<br style="padding:40px;">
 
-<h5>Causes</h5>
-<hr>
-<table class="table table-striped table-light table-hover">
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Target Goal</th>
-        <th>Current Amount</th>
-    </tr>
-    @foreach (var cause in Model.causesList)
-    {
-        <tr>
-            <td>@cause.Title</td>
-            <td>@cause.Description</td>
-            <td>@cause.TargetGoal</td>
-            <td>@cause.CurrentAmmount</td>
+<div>
+    <a href="http://localhost:4200/">Link text</a>
+</div>
 
-        </tr>
-    }
-</table>
 
 @*Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
