--- a/CommunityKitchen/Views/Archive/Index.cshtml
+++ b/CommunityKitchen/Views/Archive/Index.cshtml
@@ -1,13 +1,16 @@
 ﻿@using PersistentLayer.Repository;
 @using MyDataBase;
-@*@model PagedList.IPagedList<dynamic>*@
-@*@using PagedList.Mvc;*@
-@model dynamic
 
 
 @{
     ViewBag.Title = "Index";
 }
-
-<meta http-equiv="Refresh" content="0; url='http://localhost:4200/'" />
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='http://localhost:4200/'" />
+  </head>
+  <body>
+    <p>Please follow <a href="http://localhost:4200/">this link</a>.</p>
+  </body>
+</html>
