Edit CreateCause and Contact

--- a/CommunityKitchen/Views/Home/Contact.cshtml
+++ b/CommunityKitchen/Views/Home/Contact.cshtml
@@ -1,17 +1,122 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@*<h2>@ViewBag.Title.</h2>
+    <h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+    <address>
+        One Microsoft Way<br />
+        Redmond, WA 98052-6399<br />
+        <abbr title="Phone">P:</abbr>
+        425.555.0100
+    </address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+    <address>
+        <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+        <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    </address>*@
+
+
+<section class="contact_details">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="item center">
+                    <div class="icon_box">
+                        <span class="fa fa-object-ungroup"></span>
+                    </div>
+                    <h4>Drop Us A Line</h4>
+                    <div class="text">
+                        <p>Business standards services compliant. Users without extensible costs.</p>
+                        <h5><a style="color:red;" href="mailto:Support@example.com">Support@example.com</a></h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="item center">
+                    <div class="icon_box">
+                        <span class="fa fa-user"></span>
+                    </div>
+                    <h4>Commercial</h4>
+                    <div class="text">
+                        <p>Business standards services compliant. Users without extensible costs.</p>
+                        <h5><a style="color:red;" href="mailto:Marketing@example.com">Marketing@example.com</a></h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="item center">
+                    <div class="icon_box">
+                        <span class="fa fa-map-marker"></span>
+                    </div>
+                    <h4>Visit Our Office</h4>
+                    <div class="text">
+                        <p>262 Milacina Mrest Street, Behansed, Paris, France</p>
+                        <h5>(+86) 6 888 888</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
+<section class="contact_us">
+    <div class="container">
+        <div class="section-title text-center">
+            <h2>Leave us a message</h2>
+        </div>
+        <div class="default-form-area">
+            <form id="contact-form" name="contact_form" class="default-form" action="sendmail.php" method="post">
+                <div class="row clearfix">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+
+                        <div class="form-group">
+                            <input type="text" name="form_name" class="form-control" value="" placeholder="Your Name" required="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="form-group">
+                            <input type="email" name="form_email" class="form-control required email" value="" placeholder="Your Mail" required="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="form-group">
+                            <input type="text" name="form_phone" class="form-control" value="" placeholder="Phone">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="form-group">
+                            <input type="text" name="form_subject" class="form-control" value="" placeholder="Subject">
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="form-group">
+                            <textarea name="form_message" class="form-control textarea required" placeholder="Your Message...."></textarea>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="form-group">
+                            <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
+                            <button class="thm-btn" type="submit" data-loading-text="Please wait...">send message</button>
+                        </div>
+                    </div>
+
+                </div>
+            </form>
+        </div>
+
+    </div>
+    @*<div class="home-google-map">
+            <div class="google-map"
+                 id="contact-google-map"
+                 data-map-lat="36.170043"
+                 data-map-lng="-115.144622"
+                 data-icon-path="images/logo/map-marker.png"
+                 data-map-title="Chester"
+                 data-map-zoom="14">
+            </div>
+        </div>*@
+</section>
+
