--- a/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
@@ -37,7 +37,7 @@
                         <input id="sub" type="submit" value="Register">
                     </div>
                     <div class="inputBx">
-                        <p>ALLRADY HAVE AN ACCOUNT?<a href="#">Sign in</a></p>
+                        <p>ALLRADY HAVE AN ACCOUNT?<a onclick="signinToggle()" href="#">Sign in</a></p>
                     </div>
                 </div>
             </form>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="inputBx">
                     <p>Forget<a href="#">Password</a></p>
-                    <p>Dont have an account?<a href="#">Sign up</a></p>
+                    <p>Dont have an account?<a onclick="registerToggle()" href="#">Sign up</a></p>
                 </div>
             </form>
             <p>Login with social media</p>
