--- a/CommunityKitchen/Views/Cause/CreateCause.cshtml
+++ b/CommunityKitchen/Views/Cause/CreateCause.cshtml
@@ -3,7 +3,26 @@
 @{
     ViewBag.Title = "CreateCause";
 }
+<style>
 
+    ::-webkit-file-upload-button {
+        margin-left:-15px;
+        margin-top:-15px;
+        position: relative;
+        background: #ff2e3d;
+        font-size: 11px;
+        line-height: 34px;
+        font-weight: 600;
+        border-radius: 18px;
+        color: #ffffff;
+        border: 2px solid #ff2e3d;
+        text-transform: uppercase;
+        font-family: 'Montserrat', sans-serif;
+        display: inline-block;
+        padding: 0 22px;
+        transition: all .5s cubic-bezier(0.4, 0, 1, 1);
+    }
+</style>
 
 @using (Html.BeginForm("CreateCause", "Cause", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
